fix: corrección de tests y estabilización del sistema
🔧 Correcciones Técnicas:
- Agregado import faltante para assertThrows en ProductoServiceTest
- Eliminado mock innecesario que causaba UnnecessaryStubbing
- Repositorio actualizado con métodos requeridos para validaciones
- Tests actualizados para usar métodos correctos del repositorio

✅ Verificaciones Completadas:
- Compilación exitosa sin errores
- Todos los tests unitarios pasando (25 tests)
- Aplicación arranca correctamente en puerto 8080
- H2 Console accesible y funcionando
- APIs REST respondiendo correctamente

📊 Estado Actual del Sistema:
- ProductoService con máximo dolor arquitectónico documentado
- Sistema funcional pero intencionalmente problemático
- Preparado para evolución hacia Arquitectura Hexagonal
- Motivación CLARA para refactor debido a complejidad

🎯 Próximo Paso:
Iniciar implementación de patrones Observer/Publisher-Subscriber
para separar responsabilidades y mejorar testabilidad.

El sistema está estable y listo para la evolución arquitectónica.